# Chat_DDD_FastAPI

./: .env  .gitignore  Dockerfile  Makefile  pyproject.toml
app/application/api/: main.py  schemas.py
app/application/api/messages/: filter.py  handlers.py  schemas.py
app/domain/entities/: base.py  messages.py
app/domain/events/: base.py  messages.py
app/domain/exceptions/: message.py
app/domain/values/: base.py  messages.py
app/infra/repositories/: messages.py
app/infra/repositories/filters/: messages.py
app/infra/repositories/messages/: base.py  converters.py  memory.py  mongo.py
app/logic/: init.py  mediator.py
app/logic/applications/api/: conftest.py  test_messages.py
app/logic/commands/: base.py  messages.py
app/logic/events/: base.py
app/logic/exeptions/: mediator.py  messages.py
app/logic/queries/: base.py  messages.py
app/settings/: config.py
app/tests/: conftest.py  fixtures.py
app/tests/domain/values/: test_messages.py
app/tests/logic/: test_messages.py
docker_compose/: app.yaml  storages.yaml
