[tool.poetry]
name = "chat-ddd-fastapi"
version = "0.1.0"
description = ""
authors = ["ego rep <kloler.egor@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["httpx"], version = "^0.112.1"}
motor = "^3.5.1"
uvicorn = {extras = ["all"], version = "^0.30.3"}
ipython = "^8.26.0"
faker = "^26.0.0"
asyncio = "^3.4.3"
pytest = "^8.3.2"
pytest-asyncio = "^0.23.8"
punq = "^0.7.0"
httpx = "^0.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
